# gh-issue-to-pr

./: .env.example  .gitignore  PLAN.md  PROGRESS.md  README.md  fix.py  main.py  mswea_config.yaml  mswea_config_bash.yaml  mswea_config_powershell.yaml  patch.txt  pipeline.py  pyproject.toml  server.py
.claude/: settings.json
.github/workflows/: CI.yaml  pytest.yaml
agents/: base.py  execute.py  plan.py  summary.py  test_agent.py  validate.py
docs/: concerns.md
schema/: config.py
schemas/: state.py
self-loop/: STATE.json
src/: main.py  mswea_config_audit.yaml  mswea_config_bash.yaml  pipeline.py  server.py
src/schema/: config.py  issue.py
src/self_loop/: __init__.py  branch.py  budget.py  dedup.py  github.py  loop.py  pipeline.py  scanner.py  state.py
src/self_loop/schema/: __init__.py  loop_config.py  loop_state.py  scan_result.py
src/tests/: test_main.py  test_pipeline.py  test_server.py
src/tests/self_loop/: conftest.py  test_branch.py  test_budget.py  test_dedup.py  test_github.py  test_loop.py  test_pipeline.py  test_scanner.py  test_state.py
src/tests/tools/: test_trace.py
src/tools/: log.py  setup.py  trace.py
tests/: conftest.py  test_context.py  test_docker.py  test_logger.py  test_loop.py  test_main.py  test_manifests.py  test_pipeline.py  test_pipeline_report.py  test_readonly.py  test_server.py  test_setup.py  test_state.py  test_tools.py  test_trace.py
tests/tools/: test_log.py  test_setup.py
tools/: context.py  docker.py  eval.py  fs.py  logger.py  manifests.py  report.py  setup.py  shell.py  state.py  trace.py
