[project]
name = "gh-issue-to-pr"
version = "0.1.0"
description = "AI agent pipeline that turns GitHub issues into pull requests"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.60.0",
    "pydantic>=2.0.0",
    "arize-phoenix-otel>=0.1.0",
    "opentelemetry-sdk>=1.0.0",
    "opentelemetry-exporter-otlp-proto-http>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "mini-swe-agent>=2.2.6",
    "dotenv>=0.9.9",
    "arize-phoenix>=13.8.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.15.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "tools", "schemas"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = false
